--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Fiction'
+- GITenberg
 title: L'eau profonde; Les pas dans les pas
 url: http://www.gutenberg.org/ebooks/26891
